--- a/_posts/2018-12-07-java_basic_01.md
+++ b/_posts/2018-12-07-java_basic_01.md
@@ -98,7 +98,7 @@ package my.examples.javaexam;
 public class Box {
     private Item item; // null 을 가진다. (참조하는 것이 없다.)
 
-    public void add(Item item){
+    public void add(Item item){ // 리턴값이 없으므로 void add
         this.item = item;
         int tmp = this.item.x;
         this.item.x = this.item.y;
@@ -134,6 +134,8 @@ i가 참조하는 것은? 그 이유를 설명하시오.
 1) static, 싱글턴 패턴
 
 static, 싱글턴 패턴
+
+싱글턴 패턴은 인스턴스를 1개만 올린다. 왜 올리느냐가 중요.
 
 다음의 Wrapper class
 
