update_blog_search.html
search.html 파일 수정중~~

--- a/_posts/2018-12-07-blog_ver1.md
+++ b/_posts/2018-12-07-blog_ver1.md
@@ -40,3 +40,6 @@ comments: true
 자세한 내용은 사이트참고
 
 내용참고 : https://17billion.github.io/jekyll/disqus/reply/2017/06/01/jekyll_disqus.html
+
+## 2. 검색기능 추가
+
