--- a/_posts/2018-12-07-java_basic_02.md
+++ b/_posts/2018-12-07-java_basic_02.md
@@ -27,7 +27,7 @@ import java.time.*; // time 패키지
 public class TimeExam {
 
     public static void main(String[] args) {
-        LocalDateTime timePoint = LocalDateTime.now(); // 현재시간 가져오기.
+        LocalDateTime timePoint = LocalDateTime.now(); // 현재시간 timePoint에 담기.
         System.out.println(timePoint);
 
         LocalDate test1 = LocalDate.of(2012, Month.DECEMBER, 12);
@@ -67,5 +67,3 @@ public class TimeExam {
 
 2018-12-07 / 7 / 16 / 33 / 56 / 
 {% endhightlight %}
-
-
