--- a/_posts/2018-12-07-blog_ver1.md
+++ b/_posts/2018-12-07-blog_ver1.md
@@ -3,7 +3,7 @@ layout: post
 title:  "[블로그] 개선점 ver 0.1"
 date:   2018-12-06
 excerpt: "블로그 개선점"
-java: true
+Github_Blog : true
 tag:
 - github
 - github-blog
