--- a/_posts/2018-12-13-java_basic01.md
+++ b/_posts/2018-12-13-java_basic01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "[자바] 2018-12-13 공부내용"
-date:   2018-12-11
+date:   2018-12-13
 excerpt: "java equals, 정규표현식, java io 패키지, sort 정렬"
 java: true
 tag:
@@ -148,6 +148,78 @@ Byte단위 입출력 클래스는 클래스의 이름이 InputStream이나 Outpu
 
 * 파일로부터 1byte씩 읽어들여 파일에 1byte씩 저장하는 프로그램을 작성
   
+3) 장식하는 클래스
+
+DataInputStream , DataOutputStream, BufferedReader, PrintWriter
+
+* 4가지 추상클래스(InputStream,OutputStreamReader,Reader,Writer)를 받아들이는 생성자가 있다면, 다양한 입출력방법을 
+
+제공하는 클래스입니다.
+
+5) 실전예제
+
+Byte 단위 입출력 심화
+
+Byte단위 입출력 클래스는 클래스의 이름이 InputStream이나 OutputStream으로 끝납니다.
+
+파일로 부터 512byte씩 읽어들여 파일에 512byte씩 저장하는 프로그램을 작성
+
+byte[] buffer = new byte[512];
+
+512byte만큼 읽어 들이기 위해 byte배열을 사용
+
+자바에서 byte를 읽을때는 1byte를 읽고 511byte를 버리기때문에 배열의 사이즈를 지정해주면 처음부터
+
+512byte를 읽기 때문에 파일을 읽기전에 파일 사이즈를 지정해주면 성능상에 더욱더 좋습니다.
+
+```java
+
+package my.examples.javaexam;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class ByteIOExam01 {
+    public static void main(String[] args) {
+        long startTime = System.currentTimeMillis();
+        FileInputStream fis = null; // 파일을 생성하는 것!
+        FileOutputStream fos = null;
+
+        try {
+            fis = new FileInputStream("src/main/java/my/examples/javaexam/ByteIOExam01.java");
+            fos = new FileOutputStream("byte.txt");
+
+            int readCount = -1;
+            byte[] buffer = new byte[512];
+            while((readCount = fis.read()) != -1){
+                fos.write(buffer,0,readCount);
+            }
+
+        } catch (Exception e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        } finally {
+            try {
+                fos.close();
+            } catch (IOException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            }
+            try {
+                fis.close();
+            } catch (IOException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            }
+        }
+        long endTime = System.currentTimeMillis();
+        //메소드를 수행하는데 걸린 시간을 구할 수 있음.
+        System.out.println(endTime-startTime);
+    }
+}
+
+```
 
 ## 5. 숙제
 
