--- a/_posts/2018-12-13-java_basic01.md
+++ b/_posts/2018-12-13-java_basic01.md
@@ -156,6 +156,8 @@ DataInputStream , DataOutputStream, BufferedReader, PrintWriter
 
 제공하는 클래스입니다.
 
+**java IO는 사용하면 반드시 닫아줘야한다.**
+
 5) 실전예제
 
 Byte 단위 입출력 심화
@@ -216,6 +218,93 @@ public class ByteIOExam01 {
         long endTime = System.currentTimeMillis();
         //메소드를 수행하는데 걸린 시간을 구할 수 있음.
         System.out.println(endTime-startTime);
+    }
+}
+
+```
+
+```java
+
+package my.examples.javaexam;
+import java.io.DataInput;
+import java.io.DataInputStream;
+import java.io.FileInputStream;
+
+public class ByteExam4 {
+    public static void main(String[] args) {
+        try(DataInputStream out = new DataInputStream(new FileInputStream("data.txt"))) {
+            // data.txt 파일 객체생성
+            int i = out.readInt(); // int, boolean, double 형 읽어오기
+            boolean b = out.readBoolean();
+            double d = out.readDouble();
+
+            System.out.println(i);
+            System.out.println(b);
+            System.out.println(d);
+        } catch(Exception ex) {
+            ex.printStackTrace();
+        }
+    }
+}
+
+```
+
+char 단위 입출력 예제
+
+```java
+package my.examples.javaexam;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class ByteExam05 {
+    public static void main(String[] args) {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        // char 단위 입출력 클래스을 이용해서 키보드로부터 한줄 입력받아서 콘솔에 출력.
+        String line = null;
+        try {
+            line = br.readLine(); // 1라인을 읽는다.
+        } catch (IOException e){
+            e.printStackTrace();
+        }
+        System.out.println(line); // 라인 출력.
+    }
+}
+
+```
+
+Char 단위 입출력(File)
+
+char 단위 입출력 클래스는 클래스 이름이 Reader나 Writer로 끝이 납니다.
+
+```java
+
+package my.examples.javaexam;
+
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.PrintWriter;
+
+public class CharIOExam02 {
+    public static void main(String[] args) {
+        BufferedReader br = null; // 선언과 생성은 따로 따로 하는게 좋다.
+        PrintWriter pw = null; // 선언
+            try{ // 반드시 try catch후 Exception 선언 finally에는 io 사용시 반드시 닫아준다.
+                br = new BufferedReader(new FileReader ("C:\\fastcampus/javaexam/src/main/java/my/examples/javaexam/CharIOExam02.java")); 
+                // 파일을 읽기위해 생성
+                pw = new PrintWriter(new FileWriter("test.txt"));
+                // 편리하기 출력하기 위해 생성
+                String line = null;
+                while((line = br.readLine()) != null) {
+                    pw.println(line);
+                }
+            } catch(Exception e) {
+                e.printStackTrace();
+            } finally {
+                pw.close(); // 닫기
+            }
     }
 }
 
