블로그_카테고리추가
react 카테고리 추가

--- a/_posts/2018-12-19-reactjs.md
+++ b/_posts/2018-12-19-reactjs.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "[ReactJs] 리엑트 기초"
-date:   2018-12-19
+date:   2018-12-20
 excerpt: "reactJs, javaScript"
-java: true
+reactjs: true
 tag:
 - reactJs
 - JSON
@@ -13,5 +13,19 @@ comments: true
 ---
 
 ## 1. ReactJS 시작하기
+
+[프로그래머스] : https://programmers.co.kr/learn/courses/944
+
+[VELOPERT.LOG] : https://velopert.com/3417
+
+1) React-router 
+
+써드파티 라이브러리로서, 비록 공식은 아니지만 (페이스북 공식 라우팅 라이브러리는 존재하지 않습니다) 가장 많이 사용되고 
+
+있는 라이브러리, 클라이언트 사이드에서 이뤄지는 라우팅을 간단하게 해줍니다. 게다가 서버 사이드 렌더링도 도와주는 
+
+도구들이 함께 딸려옵니다. 추가적으로 이 라우터는 react-native 에서도 사용 될 수 있습니다.
+
+가장 필수적인 라이브러리입니다.
 
 
