알고리즘 공부중!!
알고리즘 기초공부

--- a/_posts/2018-12-22-algo_01.md
+++ b/_posts/2018-12-22-algo_01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "[알고리즘] 대소문자 변경, 최대공약수, 소수"
+title:  "[알고리즘] 대소문자 변경, 최대공약수, 소수, 팩토리얼"
 date:   2018-12-22
-excerpt: "대소문자, 최대공약수, 소수"
+excerpt: "대소문자, 최대공약수, 소수, 팩토리얼"
 algo: true
 tag: 대소문자, 최대공약수, 소수
 ---
@@ -98,5 +98,26 @@ public class algo03 {
     }
 }
 
+
+```
+
+## 4. 팩토리얼
+
+```java
+
+public class algo04 {
+    public static void main(String[] args) {
+        int intNum = 5;
+
+        // ex) 5! = 5*4*3*2*1; 팩토리얼값이란?
+        // ex) 7! = 7*6*5*4*3*2*1;
+        int factNum = 1;
+
+        for(int i = intNum; i>0; i--) {
+            factNum *= i;
+        }
+        System.out.println(factNum);
+    }
+}
 
 ```
