--- a/_posts/2018-12-22-algo_01.md
+++ b/_posts/2018-12-22-algo_01.md
@@ -113,10 +113,16 @@ public class algo04 {
         // ex) 7! = 7*6*5*4*3*2*1;
         int factNum = 1;
 
-        for(int i = intNum; i>0; i--) {
-            factNum *= i;
+        for(int i = intNum; i>0; i--) { // --, ++ 둘다가능
+            factNum *= i; // *= 5*4*3*2*1 연산
         }
         System.out.println(factNum);
+
+        int factNum2 = 1;
+
+        for(int i = 1; i<=intNum; i++) {
+            factNum2 *= i;
+        }
     }
 }
 
