알고리즘 업데이트
알고리즘 백준 6588번 풀이

--- a/_posts/2018-12-26-algo.md
+++ b/_posts/2018-12-26-algo.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "[알고리즘] 일곱난쟁이 구하기"
+title:  "[알고리즘] 일곱난쟁이 구하기, 날짜계산"
 date:   2018-12-26
-excerpt: "일곱난쟁이"
+excerpt: "일곱난쟁이,날짜계산"
 algo: true
 tag: 백준, 일곱난쟁이
 ---
@@ -55,6 +55,37 @@ public class algo07 {
             if(number[i] != 0) {
                 System.out.println(number[i]);
             }
+        }
+    }
+}
+
+```
+
+## 2. 날짜계산
+
+<figure>
+    <a href="/assets/img/algo02.png"><img src="/assets/img/algo02.png"></a>
+</figure>
+
+```java
+
+import java.util.Scanner;
+
+public class algo08 {
+    public static void main(String[] args) {
+        Scanner sc = new Scanner(System.in);
+        final int E = sc.nextInt() -1;
+        final int S = sc.nextInt() -1;
+        final int M = sc.nextInt() -1;
+
+        int y = 0;
+
+        while(true) {
+            if((y % 15 == E) && (y % 28 == S) && (y % 19 == M)) {
+                System.out.println( y+1 );
+                break;
+            }
+            y++;
         }
     }
 }
