--- a/_posts/2018-12-03-cert_02.md
+++ b/_posts/2018-12-03-cert_02.md
@@ -24,20 +24,30 @@ SQLD에 관심이 생겨서 대략 한달정도 시간을 들여서 시험공부
 
 ## 1. 공부법
 
-<p>구루비 사이트 참조</p>
-<p>SQL 전문가 가이드 (2013년 버전) : <a href="http://www.gurubee.net/bookcafe/sqlp_1st">링크</a></p>
-{% highlight html %}
+구루비 사이트 참조
+
+SQL 전문가 가이드 (2013년 버전) : [링크](http://www.gurubee.net/bookcafe/sqlp_1st)
+
 개인적으로는 책보다는 구루비 사이트 참고를 하는게 더 도움이 되었습니다.
-이론 2주, 기출문제 2주 준비
-{% endhighlight %}
+
+이론 처음부터 끝까지 - 정독 2~3회 가량(2주가량 소요했습니다), 기출문제 2주 소요
 
 ## 2. 기출문제 참고
- 
-<p>SQL 자격검정 실전문제 : <a href="http://www.yes24.com/24/goods/33524934">링크참조</a></p>
 
-{% highlight html %}
+SQL 자격검정 실전문제 : [링크](http://www.yes24.com/24/goods/33524934)
+
 도움은 많이 되었으나 기초지식없이는 상당히 어려움.
+
 고급 SQL 활용 및 튜닝은 손을 댈수가 없었습니다.
+
 카페 반응을 보았을때 이번 시험난이도는 어려웠던걸로 예상합니다.
-12.31일 결과발표 후 재포스팅 하겠습니다.
-{% endhighlight %}
+
+## 3. 난이도
+  
+기출문제를 문제없이 풀 경우라면 고득점이 가능할 것 같습니다.
+
+시간이 약간 부족할 수 있기 때문에, 분배만 잘 하면 개발경험이 없더라도 합격할만한 난이도입니다.
+
+현 재직자라면 2주 정도만 공부해도 문제없이 통과할 것 같습니다.
+
+
