--- a/_posts/2018-12-03-cert_02.md
+++ b/_posts/2018-12-03-cert_02.md
@@ -13,7 +13,7 @@ tag:
 comments: true
 ---
 
-## SQLD 자격증 후기
+### SQLD 자격증 후기
 
 <figure>
     <a href="/assets/img/sqld_cert.png"><img src="/assets/img/sqld_cert.png"></a>
@@ -22,17 +22,19 @@ comments: true
 
 SQLD에 관심이 생겨서 대략 한달정도 시간을 들여서 시험공부를 하였습니다.
 
-## 1. 공부법
+### 1. 공부법
+<hr>
 
-구루비 사이트 참조
+* SQL 전문가 가이드 (2013년 버전) : [링크](http://www.gurubee.net/bookcafe/sqlp_1st)
 
-SQL 전문가 가이드 (2013년 버전) : [링크](http://www.gurubee.net/bookcafe/sqlp_1st)
+* 개인적으로는 책을 구매안하고 구루비 사이트를 참고하는 것을 더 추천합니다. 내용 정리나 실제 쿼리를 실행하면서
+  
+  연습을 할 때도 훨씬 더 유용합니다.
 
-개인적으로는 책보다는 구루비 사이트 참고를 하는게 더 도움이 되었습니다.
+* 이론 처음부터 끝까지 - 정독 2~3회 가량(2주가량 소요했습니다), 기출문제 2주 소요
 
-이론 처음부터 끝까지 - 정독 2~3회 가량(2주가량 소요했습니다), 기출문제 2주 소요
-
-## 2. 기출문제 참고
+### 2. 기출문제 참고
+<hr>
 
 SQL 자격검정 실전문제 : [링크](http://www.yes24.com/24/goods/33524934)
 
@@ -42,12 +44,20 @@ SQL 자격검정 실전문제 : [링크](http://www.yes24.com/24/goods/33524934)
 
 카페 반응을 보았을때 이번 시험난이도는 어려웠던걸로 예상합니다.
 
-## 3. 난이도
+### 3. 난이도
   
 기출문제를 문제없이 풀 경우라면 고득점이 가능할 것 같습니다.
 
 시간이 약간 부족할 수 있기 때문에, 분배만 잘 하면 개발경험이 없더라도 합격할만한 난이도입니다.
 
 현 재직자라면 2주 정도만 공부해도 문제없이 통과할 것 같습니다.
+
+
+### 4. 후기
+
+아슬아슬하게 합격한 감이 있습니다. 모델링 부분은 잘풀었는데 뒤쪽 SQL 활용은
+
+문제를 푸는데 시간이 부족했습니다. 다음에는 SQLP 자격증에 도전해보겠습니다.
+
 
 
