[2018.01.01] SQLD 자격증 후기
SQLD 자격증 후기 내용 변경!!

--- a/_posts/2018-12-03-cert_02.md
+++ b/_posts/2018-12-03-cert_02.md
@@ -36,28 +36,27 @@ SQLD에 관심이 생겨서 대략 한달정도 시간을 들여서 시험공부
 ### 2. 기출문제 참고
 <hr>
 
-SQL 자격검정 실전문제 : [링크](http://www.yes24.com/24/goods/33524934)
+* SQL 자격검정 실전문제 : [링크](http://www.yes24.com/24/goods/33524934)
 
-도움은 많이 되었으나 기초지식없이는 상당히 어려움.
+* 도움은 많이 되었으나 기초지식없이는 상당히 어려움.
 
-고급 SQL 활용 및 튜닝은 손을 댈수가 없었습니다.
+* 이론 정독 2회정도, 기출문제 위주로 공부하는게 합격확률이 높을것 으로 생각.
 
-카페 반응을 보았을때 이번 시험난이도는 어려웠던걸로 예상합니다.
-
-### 3. 난이도
-  
-기출문제를 문제없이 풀 경우라면 고득점이 가능할 것 같습니다.
-
-시간이 약간 부족할 수 있기 때문에, 분배만 잘 하면 개발경험이 없더라도 합격할만한 난이도입니다.
-
-현 재직자라면 2주 정도만 공부해도 문제없이 통과할 것 같습니다.
+* 실제 시험은 SQL활용쪽에 문제가 많고, 바로 판단하기 어려울 수 있기 때문에 기출문제로
+  유형파악을 하지 않을 경우, 시간이 부족할수 있음.
 
 
-### 4. 후기
+### 3. 후기
+<hr>
 
-아슬아슬하게 합격한 감이 있습니다. 모델링 부분은 잘풀었는데 뒤쪽 SQL 활용은
+* 아슬아슬하게 합격한 감이 있습니다. 모델링 부분은 잘풀었는데 뒤쪽 SQL 활용은
 
-문제를 푸는데 시간이 부족했습니다. 다음에는 SQLP 자격증에 도전해보겠습니다.
+* 문제를 푸는데 시간이 부족했습니다. 
 
+* 전반적인 DB관련된 지식을 정리하는데 도움을 준다고 봅니다. 
 
+<figure>
+    <a href="/assets/img/sqld_cert02.png"><img src="/assets/img/sqld_cert02.png"></a>
+    <!--<figcaption>Caption describing these two images.</figcaption>-->
+</figure>
 
