#19.01.03 자바_쓰레드 글 수정완료

--- a/_posts/2019-01-03-java_01.md
+++ b/_posts/2019-01-03-java_01.md
@@ -19,14 +19,13 @@ comments: true
 ## 1. 쓰레드 구현
 
 쓰레드를 구현하는 두가지 방법
----------------------------
 
-1. Runnable 인터페이스를 구현한다.
+#### 1. Runnable 인터페이스를 구현한다.
    
-- Runable 인터페이스가 가지고 있는 run()메소드를 구현한다.
-- MyThread2는 Thread를 상속받지 않았기 때문에 Thread가 아니다.
-- Thread를 생성하고, 해당 생성자에 MyThread2를 넣어서 Thread를 생성한다.
-- Thread 클래스가 가진 start()메소드를 호출한다.
+* Runable 인터페이스가 가지고 있는 run()메소드를 구현한다.
+* MyThread2는 Thread를 상속받지 않았기 때문에 Thread가 아니다.
+* Thread를 생성하고, 해당 생성자에 MyThread2를 넣어서 Thread를 생성한다.
+* Thread 클래스가 가진 start()메소드를 호출한다.
 
 ```java
 
@@ -68,11 +67,11 @@ public class ThreadExam2 {
 
 ```
 
-2. Thread를 클래스를 상속 받는다
+#### 2. Thread를 클래스를 상속 받는다
 
-- Thread 클래스를 상속 받을 시에는 다른 클래스를 상속 받을수 없다.
-- Thread를 상속받았으므로 MyThread1은 Thread이다.
-- 쓰레드를 생성하고, Thread 클래스가 가지고 있는 start() 메소드를 호출한다.
+* Thread 클래스를 상속 받을 시에는 다른 클래스를 상속 받을수 없다.
+* Thread를 상속받았으므로 MyThread1은 Thread이다.
+* 쓰레드를 생성하고, Thread 클래스가 가지고 있는 start() 메소드를 호출한다.
   
 ```java
     public class MyThread1 extends Thread {
@@ -112,11 +111,11 @@ public class ThreadExam1 {
 
 ```
 
-3. 공유객체
+#### 3. 공유객체
 
-- 하나의 객체를 동시에 여러개의 Thread가 사용한다는 것을 의미
-- 동시에 같은 Thread가 같은 자료구조, 메소드를 참고하려면 synchronized를 붙여야한다.
-- synchronized가 붙은 경우에는 여러개의 쓰레드가 참고할수 없다.
+* 하나의 객체를 동시에 여러개의 Thread가 사용한다는 것을 의미
+* 동시에 같은 Thread가 같은 자료구조, 메소드를 참고하려면 synchronized를 붙여야한다.
+* synchronized가 붙은 경우에는 여러개의 쓰레드가 참고할수 없다.
 
 ```java
 
