--- a/_posts/2019-01-03-java_01.md
+++ b/_posts/2019-01-03-java_01.md
@@ -67,7 +67,7 @@ public class ThreadExam2 {
 
 ```
 
-#### 2. Thread를 클래스를 상속 받는다
+### 2. Thread를 클래스를 상속 받는다
 
 * Thread 클래스를 상속 받을 시에는 다른 클래스를 상속 받을수 없다.
 * Thread를 상속받았으므로 MyThread1은 Thread이다.
@@ -111,7 +111,7 @@ public class ThreadExam1 {
 
 ```
 
-#### 3. 공유객체
+### 3. 공유객체
 
 * 하나의 객체를 동시에 여러개의 Thread가 사용한다는 것을 의미
 * 동시에 같은 Thread가 같은 자료구조, 메소드를 참고하려면 synchronized를 붙여야한다.
