#19.01.04 가장 기본적인 팁!!

--- a/_posts/2019-01-04-git_01.md
+++ b/_posts/2019-01-04-git_01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "[git] 사용하면서 유념해야할 일"
+title:  "[git] 반드시 지켜야할 팁"
 date:   2019-01-03
-excerpt: "GIT,GITHUB"
+excerpt: "GIT,GITHUB,cleanCode"
 java: true
 tag:
 - git
