#19.01.09 jstl 포스팅 업데이트

--- a/_posts/2019-01-09-java_jstl.md
+++ b/_posts/2019-01-09-java_jstl.md
@@ -29,7 +29,8 @@ comments: true
 
 ```java
 
-<c:out value="출력할 값" default="value가 null일 경우 설정한 default값 출력"/> <c:out value="작성자" default="Admin" /> 
+<c:out value="출력할 값" default="value가 null일 경우 설정한 default값 출력"/> 
+<c:out value="작성자" default="Admin" /> 
 <c:out value="hello world!!!!!!!" />
 
 ```
