#19.01.09 el, jstml 포스팅 업로드

--- a/_posts/2019-01-09-java_jstl.md
+++ b/_posts/2019-01-09-java_jstl.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title:  "[Jstl] jstl 정리"
+title:  "[Jstl] jstl, el 정리"
 date:   2019-01-07
-excerpt: "jstl"
+excerpt: "jstl,el"
 java: true
 tag:
 - jstl
+- el
 
 comments: true
 ---
@@ -58,7 +59,7 @@ comments: true
 ```
 
 * (4) c:if(prefix="c") = 조건문을 수행한다. if와 동일한 역할을 한다.
-
+  
 ```java
 
 <c:if test="${pageInfo.PAGE_EDIT eq 'Y'}">
@@ -99,3 +100,37 @@ $.ajax({ type:"POST", url: '<c:url value="/board/data/getList"/>',
 <c:import url="http://www.naver.com">
 
 ```
+
+# JSP el이란?
+
+## 1.1 EL( EXPRESSION LANGUAGE ) 이란?
+
+* 자바코드를 대신하여 다른 표현식을 사용함으로서 태그와의 혼동을 막고 좀더 간결한 소스 
+* 작성가능 값을 표현하는데 사용되는 새로운 스크립트 언어로 JSP의 기본문법을 보완하는 역할을 한다.
+* JSP 네 가지 기본 객체가 제공하는 영역의 속성 사용한다
+* 집합 객체에 대한 접근, 수치 연산, 관계 연산, 논리 연산자 제공
+* 자바 클래스 메서드 호출 기능 제공
+* 표현 언어만의 기본 객체 제공
+
+## 1.2 EL 표현식의 장단점
+
+* 장점 : 파싱단계를 최소화, 그로인해서 컴파일이 빨라진다.
+* 단점 : 복잡한 데이터의 처리는 불가능하다.
+
+## 1.3 EL 사용 목적
+
+* <%= %> , out.println()과 같은 자바코드를 더 이상 사용하지 않고 좀더 간편하게 출력을     
+* 지원하기 위한 도구이며, 배열이나 컬렉션에서도 사용되고, JavaBean의 프로퍼티에서도 사용된다.
+
+## 1.4 EL 문법
+
+* Attribute형식에서는 <%= cnt + 1 %>를 쓰지 않고 ${cnt + 1}로 쓰고
+* Parameter형식에서는 ${param.abc}으로 씁니다.
+* 값을 찾을때 Attribute는 작은 Scope에서 큰 Scope로 찾는다 (경로:page → request → session → application) 
+
+## 1.5 EL 내장객체
+
+* pageContext : JSP PAGE의 기본객체와 동일하다
+* pageScope : pageContext 기본 객체에 저장된 속성의 <속성, 값> 매핑을 저장한 Map 객체
+* requestScope : request 기본 객체에 저장된 속성의 <속성, 값> 매핑을 저장한 Map 객체
+* param : 요청 파라미터의 <파라미터이름, 값> 매핑을 저장한 Map 객체, 타입은 String
