#19.01.23 TTL 업로드 - 자바 람다식

--- a/_posts/2019-01-22-java.md
+++ b/_posts/2019-01-22-java.md
@@ -1,20 +1,21 @@
 ---
 layout: post
-title:  "[TTL] 2019-01-22"
+title:  "[TTL] 2019-01-22 Spring, Spel, java Config, xml config"
 date:   2019-01-21 
-excerpt: "Spring, IOC container, Bean LifeCycle, xml"
+excerpt: "Spel, java config, xml config"
 java: true
 tag:
 - spring
-- IOC Container
-- Bean LifeCycle
-- xml
+- Spel
+- java config
+- xml config
 ---
 
 ## 0. 목차
+
 [1.스프링에서 사용하는 기술](#스프링에서-사용하는-기술)
-[2.Spring Expression Language](#Spring-Expression-Language)
-[3.Spring Jdbc](#Spring-Jdbc)
+
+[2.spring expression language](#spring-expression-language)
 
 ## 1. 스프링에서 사용하는 기술
 
@@ -59,7 +60,8 @@ public class DiceConfig {
         <constructor-arg value="6"/>
     </bean>
     
-     */
+    */
+
     @Bean
     public Dice dice(){
         System.out.println("dice() --------------------------");
