#19.01.25 TTL 업데이트, 블로그_CSS 수정

--- a/_posts/2019-01-22-java.md
+++ b/_posts/2019-01-22-java.md
@@ -9,9 +9,10 @@ tag:
 - Spel
 - java config
 - xml config
+- comments: true
 ---
 
-## 0. 목차
+# 0. 목차
 
 [1.스프링에서 사용하는 기술](#스프링에서-사용하는-기술)
 
@@ -20,22 +21,22 @@ tag:
 ## 1. 스프링에서 사용하는 기술
 
 * java 의 리플렉션이란 기술을 이용하면 interface를 구현하는 인스턴스를 동적으로 생성할 수 있다. - Java Proxy
-* java 기본으로 제공하는 기술로는 특정 클래스를 상속받는 인스턴스를 동적으로 생성할 수 없다. - 오픈소스로 가능 
-* 대표적인 프로젝트가 cglib 
+* java 기본으로 제공하는 기술로는 특정 클래스를 상속받는 인스턴스를 동적으로 생성할 수 없다. 오픈소스로 가능
+* 대표적인 프로젝트가 cglib
 
-* Spring이 java config를 읽어들이면, 해당 java config 클래스를 상속받는 객체를 동적으로 생성한다. 
-* 클래스파일 없이 인스턴스를 만들수있다 -> 메모리상에만 클래스파일을 만들어서 처리한다 
+* Spring이 java config를 읽어들이면, 해당 java config 클래스를 상속받는 객체를 동적으로 생성한다.
+* 클래스파일 없이 인스턴스를 만들수있다 -> 메모리상에만 클래스파일을 만들어서 처리한다
   (다만 실제로 디스크상에는 존재하지 않는다)
 
 ```java
-class DiceConfig$$EnhancerBySpringCGLIB$$2b1a2b2f 
+class DiceConfig$$EnhancerBySpringCGLIB$$2b1a2b2f
         extends DiceConfig{
     @Bean
     public Dice dice(){
         // 처음호출되었느냐? 아니냐?
-        // 처음호출되었을 경우엔 
+        // 처음호출되었을 경우엔
         return super.dice();
-        // 처음이 아닐 경우 
+        // 처음이 아닐 경우
         // id가 Dice가 이미 저장되어 있으니 해당 dice를 리턴.
     }
 }
@@ -49,17 +50,17 @@ class DiceConfig$$EnhancerBySpringCGLIB$$2b1a2b2f
 
 @Configuration
 public class DiceConfig {
-    
+
     /*
-    
+
     빈을 생성하는 메소드에는 @Bean 애노테이션이 붙는다.
     메소드 이름이 id값이 된다.
-    
-    ex) config.xml 
+
+    ex) config.xml
     <bean id="dice" class="soundsystem.Dice">
         <constructor-arg value="6"/>
     </bean>
-    
+
     */
 
     @Bean
@@ -110,12 +111,12 @@ public class DiceConfig {
 // java config로 hikaricp 연동파일 예시
 
 @Configuration // configuration이 붙었기 때문에 해당 클래스의 정보를 모두 config로 읽어들인다
-@PropertySource("classpath:datasource.properties") 
+@PropertySource("classpath:datasource.properties")
 // classpath(resource) 에서 datasource.properties라는 파일을 읽어온다.
 
-public class DataSourceConfig { 
+public class DataSourceConfig {
     // db 설정파일 처럼 외부에 유출되면 안되는 정보는 외부에서 읽어온다.
-    @Value( "${jdbcUrl}" ) 
+    @Value( "${jdbcUrl}" )
     private String jdbcUrl;
     @Value( "${driverClassName}" )
     private String driverClassName;
@@ -156,32 +157,32 @@ public class DataSourceConfig {
 // SpEL은 기본적인 사칙연산, 제곱 등 MATH 에 관련된 기능을 제공해줍니다.
 
 @Value("#{19 + 1}") // 20
-private double add; 
- 
+private double add;
+
 @Value("#{'String1 ' + 'string2'}") // "String1 string2"
-private String addString; 
- 
+private String addString;
+
 @Value("#{20 - 1}") // 19
 private double subtract;
- 
+
 @Value("#{10 * 2}") // 20
 private double multiply;
- 
+
 @Value("#{36 / 2}") // 19
 private double divide;
- 
+
 @Value("#{36 div 2}") // 18, the same as for / operator
-private double divideAlphabetic; 
- 
+private double divideAlphabetic;
+
 @Value("#{37 % 10}") // 7
 private double modulo;
- 
+
 @Value("#{37 mod 10}") // 7, the same as for % operator
-private double moduloAlphabetic; 
- 
+private double moduloAlphabetic;
+
 @Value("#{2 ^ 9}") // 512
 private double powerOf;
- 
+
 @Value("#{(2 + 2) * 2 + 9}") // 17
 private double brackets;
 
@@ -193,37 +194,37 @@ private double brackets;
 
 @Value("#{1 == 1}") // true
 private boolean equal;
- 
+
 @Value("#{1 eq 1}") // true
 private boolean equalAlphabetic;
- 
+
 @Value("#{1 != 1}") // false
 private boolean notEqual;
- 
+
 @Value("#{1 ne 1}") // false
 private boolean notEqualAlphabetic;
- 
+
 @Value("#{1 < 1}") // false
 private boolean lessThan;
- 
+
 @Value("#{1 lt 1}") // false
 private boolean lessThanAlphabetic;
- 
+
 @Value("#{1 <= 1}") // true
 private boolean lessThanOrEqual;
- 
+
 @Value("#{1 le 1}") // true
 private boolean lessThanOrEqualAlphabetic;
- 
+
 @Value("#{1 > 1}") // false
 private boolean greaterThan;
- 
+
 @Value("#{1 gt 1}") // false
 private boolean greaterThanAlphabetic;
- 
+
 @Value("#{1 >= 1}") // true
 private boolean greaterThanOrEqual;
- 
+
 @Value("#{1 ge 1}") // true
 private boolean greaterThanOrEqualAlphabetic;
 
@@ -233,20 +234,20 @@ private boolean greaterThanOrEqualAlphabetic;
 // SpEL은 기본적인 논리연산 또한 제공해줍니다.
 
 @Value("#{250 > 200 && 200 < 4000}") // true
-private boolean and; 
- 
+private boolean and;
+
 @Value("#{250 > 200 and 200 < 4000}") // true
 private boolean andAlphabetic;
- 
+
 @Value("#{400 > 300 || 150 < 100}") // true
 private boolean or;
- 
+
 @Value("#{400 > 300 or 150 < 100}") // true
 private boolean orAlphabetic;
- 
+
 @Value("#{!true}") // false
 private boolean not;
- 
+
 @Value("#{not true}") // false
 private boolean notAlphabetic;
 
@@ -261,20 +262,20 @@ private String ternary;
 
 @Value("#{'100' matches '\\d+' }") // true
 private boolean validNumericStringResult;
- 
+
 @Value("#{'100fghdjf' matches '\\d+' }") // false
 private boolean invalidNumericStringResult;
- 
+
 @Value("#{'valid alphabetic string' matches '[a-zA-Z\\s]+' }") // true
 private boolean validAlphabeticStringResult;
- 
+
 @Value("#{'invalid alphabetic string #$1' matches '[a-zA-Z\\s]+' }") // false
 private boolean invalidAlphabeticStringResult;
- 
+
 @Value("#{someBean.someValue matches '\d+'}") // true if someValue contains only digits
 private boolean validNumericValue;
 
 ```
+
 * 논리, 관계, 계산식, 인터페이스 구현등 대부분의 형식을 지원한다.
 * 이외에도 Expression 인터페이스에도 사용이 가능하다. 스프링내에서 사용할 수 있는 강력한 언어 표현식이다.
-
