--- a/_posts/2019-01-23-java.md
+++ b/_posts/2019-01-23-java.md
@@ -7,18 +7,19 @@ java: true
 tag:
 - lambda
 - java 8
+- comments: true
 ---
 
-## 자바람다식 = 익명함수 = 자바(익명메소드,익명객체를 말합니다)  
+# 자바람다식 = 익명함수 = 자바(익명메소드,익명객체를 말합니다)  
 
-#### 람다식은 일반적으로 익명함수를 뜻한다. 
- 
-* 익명함수는 말그대로 이름이 없는 함수이다 ( 다른 말로는 1급 객체라고 말한다. ) 
+## 람다식은 일반적으로 익명함수를 뜻한다
+
+* 익명함수는 말그대로 이름이 없는 함수이다 ( 다른 말로는 1급 객체라고 말한다. )
 * 반대의 뜻으로 선언적함수가 있다. 함수의 이름을 선언하는걸 선언적 함수라고 한다.
 
 ----------------------------------
 
-#### 그럼 1급 객체의 조건은 무엇인가?
+## 그럼 1급 객체의 조건은 무엇인가
 
 1. 변수(variables)에 담을수 있다.
 2. 인자(parameter)로 전달할 수 있다.
@@ -37,22 +38,22 @@ tag:
 
 // 기존 표현식
 
-new Thread(new Runnable() { 
-	@Override
-	public void run() { // Runnable 인터페이스 있는 run 메소드 오버라이딩해서 실행합니다.
-		System.out.println("Hello World.");
-	}
+new Thread(new Runnable() {
+@Override
+public void run() { // Runnable 인터페이스 있는 run 메소드 오버라이딩해서 실행합니다.
+System.out.println("Hello World.");
+}
 }).start();
 
 // 람다표현식
 
-new Thread(()->{ 
+new Thread(()->{
 // new Runnalbe() { @Override run 메소드 구현 하는 부분이 사라졌습니다.
 // 이게 가능한 이유는 Runnable이 한개의 메소드만 가진 함수형 인터페이스 이기 때문에 가능합니다.
 // 즉 기본적으로 람다식을 위한 인터페이스에서 추상 메소드는 반드시 하나여야합니다.
 // 예외로 Object로 상속받는 equals, compareTo, toString 등등은 추상메소드와 같이 사용할 수 있습니다.
 
-	System.out.println("Hello World.");
+System.out.println("Hello World.");
 }).start();
 
 ```
