--- a/_posts/2019-01-23-java.md
+++ b/_posts/2019-01-23-java.md
@@ -10,7 +10,7 @@ tag:
 comments: true
 ---
 
-# 자바람다식 = 익명함수 = 자바(익명메소드,익명객체를 말합니다)  
+## 자바람다식 = 익명함수 = 자바(익명메소드,익명객체를 말합니다)  
 
 ## 람다식은 일반적으로 익명함수를 뜻한다
 
