#19.02.07 JPQL 사용법 정리

--- a/_posts/2019-02-07-jpql.md
+++ b/_posts/2019-02-07-jpql.md
@@ -21,7 +21,7 @@ comments: true
 
 ## 2. JPQL fetch join 사용법
 
-1) 공식문서 명령어 , [LEFT [OUTER] | INNER] JOIN FETCH 조인경로
+1) 공식문서 명령어 , [LEFT [OUTER] INNER] JOIN FETCH 조인경로
 
 2) 엔티티 패치 조인
 
@@ -95,7 +95,7 @@ System.out.println(parents);
 2. 둘 이상의 컬렉션을 페치 할 수 없다.
 3. 컬렉션을 페치 조인하면 페이징 API를 사용 할 수 없다.
 
-[출처1](http://wonwoo.ml/index.php/post/797)
-[출처2](http://acornpub.co.kr/book/jpa-programmig)
+* [출처1](http://wonwoo.ml/index.php/post/797)
+* [출처2](http://acornpub.co.kr/book/jpa-programmig)
  
  
