--- a/_posts/2019-02-26-TIL.md
+++ b/_posts/2019-02-26-TIL.md
@@ -27,6 +27,7 @@ comments: true
 * 이메일 연동 작업 ( 비밀번호 찾기 )
 * jpql N+1 문제
 * 기능별 수정삭제 기능
+* aws 배포후 테스트, 문제가 없을 경우 travis ci를 사용해서 배포자동화 작업
 
 ## 2. 알고리즘
 
