--- a/_posts/2019-02-27-TIL.md
+++ b/_posts/2019-02-27-TIL.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title:  "[TIL] Today I learned"
-date:   2019-02-26
-excerpt: "spring boot, jpa, 알고리즘"
+date:   2019-02-27
+excerpt: "spring, jpa, xml, java config"
 java: true
 tag:
-- spring boot
+- spring
 - jpa
 - 알고리즘
-- 프로젝트
 comments: true
 ---
 
