--- a/_posts/2019-03-04-TIL.md
+++ b/_posts/2019-03-04-TIL.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "[TIL] Today I learned"
-date:   2019-03-02
+date:   2019-03-04
 excerpt: "spring, jpa, xml, java config"
 java: true
 tag:
@@ -11,12 +11,14 @@ tag:
 comments: true
 ---
 
+
 ## 1. SPRING BOOT JPA 쇼핑몰 프로젝트 진행상황
 
 * ~~회원가입 처리 ~~
 * ~~회원,비회원 카트 담기~~
 * ~~회원,비회원 주문 ~~
-* ~~회원,비회원 주문내역 확인~~
+* ~~비회원 주문내역 확인~~
+* 회원 주문내역 확인 ( 처리중 )
 * 페이징 처리
 * ~~검색기능 추가( querydsl )~~
 * ~~backEnd단 유효성검사 처리~~ 2019.02.27일 완료
@@ -28,7 +30,14 @@ comments: true
 * 기능별 수정삭제 기능
 * aws 배포후 테스트, 문제가 없을 경우 travis ci를 사용해서 배포자동화 작업
 
-## 2. 알고리즘
+## 2. SPRING BOOKMARK 프로젝트 진행상황
+
+* 개발스펙 : java 8, spring 5, mybatis, mysql
+* 테이블 관계설정 및 생성 ( 1차 완료 )
+* xml 설정 작업중 ( thylemeaf, tomcat 설정완료, lombok )
+* mybatis 설정 작업중 ( 테이블 설계가 완료되면 작업진행 )
+
+## 3. 알고리즘
 
 * hackerrank 문제풀이 ( easy 단계 )
-* Do it 자료구조와 함께 배우는 알고리즘 입문 자바편 ( 공부중 )
+* boj 양념반후라이드반 문제풀이 ( 못품 )
