--- a/_posts/2019-03-06-TIL.md
+++ b/_posts/2019-03-06-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-03-07 Today I learned"
 date:   2019-03-06
 excerpt: "spring"
 java: true
