--- a/_posts/2019-03-05-TIL.md
+++ b/_posts/2019-03-05-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-03-05 Today I learned"
 date:   2019-03-05
 excerpt: "spring, jpa, xml, java config"
 java: true
