#19.03.07 파일 제목 변경

--- a/_posts/2019-02-28-TIL0228.md
+++ b/_posts/2019-02-28-TIL0228.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-02-28 Today I learned"
 date:   2019-02-28
 excerpt: "spring, jpa, xml, java config"
 java: true
