--- a/_posts/2019-03-04-TIL0304.md
+++ b/_posts/2019-03-04-TIL0304.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-03-04 Today I learned"
 date:   2019-03-04
 excerpt: "spring, jpa, xml, java config"
 java: true
