--- a/_posts/2019-02-26-TIL0226.md
+++ b/_posts/2019-02-26-TIL0226.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-02-26 Today I learned"
 date:   2019-02-26
 excerpt: "spring boot, jpa, 알고리즘"
 java: true
