--- a/_posts/2019-02-27-TIL0227.md
+++ b/_posts/2019-02-27-TIL0227.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[TIL] Today I learned"
+title:  "[TIL] 2019-02-27 Today I learned"
 date:   2019-02-27
 excerpt: "spring, jpa, xml, java config"
 java: true
