--- a/_posts/2019-03-07-TIL0307.md
+++ b/_posts/2019-03-07-TIL0307.md
@@ -35,7 +35,7 @@ comments: true
 
 ### 1) 함수형 프로그래밍이란?
 
-###### 함수형 프로그래밍은 프로그램 패러다임중의 하나입니다. 절차지향 -> 객체지향 -> 함수지향 순으로 패러다임이 달라졌습니다.
+* 함수형 프로그래밍은 프로그램 패러다임중의 하나입니다. 절차지향 -> 객체지향 -> 함수지향 순으로 패러다임이 달라졌습니다.
 
 ### 2) 객체지향 프로그램과 비교
 
