--- a/_posts/Spring/2019-05-09-DIandAOP.md
+++ b/_posts/Spring/2019-05-09-DIandAOP.md
@@ -3,7 +3,7 @@ layout: post
 title: AOP, DI란?
 date: 2019-05-09 12:46:32 +0900
 description:
-categories: Java
+categories: Spring
 tags: AOP DI
 ---
 
