# 면접용 POST, solid 5원칙 재업로드

--- a/_posts/Java/2019-06-23-solid.md
+++ b/_posts/Java/2019-06-23-solid.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: GC란? ( Garbage Collections )
+title: SOLID - 객체지향 5원칙
 date: 2019-06-23 15:42:32 +0900
 description:
 categories: Java
