--- a/_posts/데이터베이스/2019-06-26-NoSQL.md
+++ b/_posts/데이터베이스/2019-06-26-NoSQL.md
@@ -9,7 +9,8 @@ tags: NoSQL MongoDB
 
 ## NoSQL이란?
 
-* NOT ONLY SQL, 기존의 관계형 데이터베이스 시스템의 주요 특성을 보장하는 ACID 특성을 제공하지 않는, 그렇지만 뛰어난 확장성이나 성능 등의 특성을 갖는 수많은 비관계형, 분산 데이터 베이스등이 등장했고 NoSQL이라는 용어가 보편적으로 사용되었습니다.
+* NOT ONLY SQL, 표준 SQL 인터페이스를 채용하지 않은 경량 오픈 소스 관계형 데이터베이스를 NoSQL이라고 부른다.
+* 간단히 말하면 기존의 관계형 데이터베이스와는 다른 특징을 가진 데이터베이스를 말합니다.
 
 ## 특징
 
