--- a/_posts/Java/2019-06-23-solid.md
+++ b/_posts/Java/2019-06-23-solid.md
@@ -76,20 +76,20 @@ public class Player {
 * 상속관계에서는 일반화 관계가 성립해야 합니다. X IS A XX다. 라는 말이 성립해야 합니다. 예를 들면 고양이과 클래스와 그걸 상속받는 호랑이 클래스가 있다.
 
 * 고양이 Class
-  * 1. 고양이는 균형감각이 좋다
-  * 2. 고양이들은 그루밍을 매일 한다
-  * 3. 고양이들은 박스를 좋아한다
+  * 고양이는 균형감각이 좋다
+  * 고양이들은 그루밍을 매일 한다
+  * 고양이들은 박스를 좋아한다
 
 * 호랑이 Class
-  * 1. 호랑이는 균형감각이 좋다
-  * 2. 호랑이들은 그루밍을 매일 한다
-  * 3. 호랑이들은 박스를 좋아한다
+  * 호랑이는 균형감각이 좋다
+  * 호랑이들은 그루밍을 매일 한다
+  * 호랑이들은 박스를 좋아한다
 
 * 이처럼 is a 관계가 성립하면 딱히, 이상하거나 어색하지 않다. 그렇지만 만약 저기에 강아지나, 다른 포유류 동물이 들어가면 어떻게 될까?
 
-* 1. 강아지는 균형감각이 좋다
-* 2. 강아지들은 그루밍을 매일 한다
-* 3. 강아지들은 박스를 좋아한다
+* 강아지는 균형감각이 좋다
+* 강아지들은 그루밍을 매일 한다
+* 강아지들은 박스를 좋아한다
 
 * 읽어보면, 강아지들은 보통 그루밍을 하지 않는다. 스트레스를 받거나 어딘가 아파서 하는 경우가 많다. 이처럼 is a 관계가 성립되지 못한 부모자식 관계는 LSP를 성립하지 못한 관계, 즉 일관성이 없는 관계라고 할 수 있다.
 
@@ -103,7 +103,7 @@ public class Player {
 
 ### 5. 인터페이스 분리원칙 - Interface Segregation Principle
 
-* 한 클래스는 자신이 사용하지 않는 인터페이스는 구현하지 말아야 한다. 하나의 인터페이스보다는, 여러개의 구체적인 인터페이스 낫다. 이는 다시 말해서 자신이 사용하지 않는 기능에는 영향을 받지 말아야 한다는 의미이다.
+* 한 클래스는 자신이 사용하지 않는 인터페이스는 구현하지 말아야 한다. 하나의 추상적인 인터페이스보다는, 여러개의 구체적인 인터페이스 낫다. 이는 다시 말해서 자신이 사용하지 않는 기능에는 영향을 받지 말아야 한다는 의미이다.
 
 * 한가지 예를 들면, 우리는 스마트폰으로 전화, 웹서핑, 사진 촬영 등 다양한 기능을 사용할 수 있다. 그런데 스마트폰에 기능이라는 인터페이스를 만들어서 그 안에 전화 웹서핑 사진 촬영의 기능을 모두 집어넣으면 어떻게 될까? 전화 기능 하나만 확장 하려고 해도 모든 메소드를 읽어보고 가독성이 떨어질 것이다. 또한 서로 영향이 가는 메소드가 있을 경우는, 시스템의 내부의존성이 높아져서 확장하거나, 변경할 경우 많은 공수가 들어갈 수 있다.
 
