# 금일 공부내용 포스팅

--- a/_posts/Java/2019-05-05-jvm.md
+++ b/_posts/Java/2019-05-05-jvm.md
@@ -12,7 +12,7 @@ tags: JVM
 * JVM이란?
   * JVM(Java Virtual Machine, 자바 가상 머신)은 자바 바이트 코드를 실행할 수 있는 주체이다.
 
-* JVM의 역활
+* JVM의 역할
   * Java와 OS를 연결하며, Java가 OS에 독립적으로 실행되도록 한다.
   * Java 애플리케이션을 Class Loader를 통해서 읽어들여 Java API와 함께 실행한다
   * GC를 실행한다
