--- a/_posts/운영체제/2019-03-13-Thread.md
+++ b/_posts/운영체제/2019-03-13-Thread.md
@@ -11,7 +11,7 @@ tags: Process Thread Multi_Thread
 
 1. 프로세스란 단순히 실행중인 프로그램이라고 할 수 있습니다. 
 2. 즉, 사용자가 작성한 프로그램이 운영체제에 의헤 메모리공간을 할당받아 실행 중인것을 이야기합니다. 
-3. 이러한 프로세스는 프로그램에 사용되는 데이터와 메모리등의 자원 그리고 스레드 로 이루어집니다.
+3. 이러한 프로세스는 프로그램에 사용되는 데이터와 메모리등의 자원 그리고 스레드로 이루어집니다.
 
 ### 스레드란?
 
@@ -35,8 +35,7 @@ tags: Process Thread Multi_Thread
 1. 응답성 : 예를 들어 채팅프로그램을 멀티스레드화 하면, 채팅의 일부분이 전송이 되지 않거나 큰 파일을 전송하고 있어도,
    사용자는 다른 스레드를 통해서 다른 사용자와 대화가 가능하다.
 
-2. 자원공유 : 스레드는 자동적으로 그들이 속한 프로세스의 자원들과 메모리를 공유한다. 코드 공유의 이점은, 한 응용프로그램
-   같은 주소공간내에서 여러개의 다른 활동성 스레드를 가질 수 있기 때문입니다.
+2. 자원공유 : 스레드는 자동적으로 그들이 속한 프로세스의 자원들과 메모리를 공유한다. 코드 공유의 이점은, 한 응용프로그램 같은 주소공간내에서 여러개의 다른 활동성 스레드를 가질 수 있기 때문입니다.
 
 3. 경제성 : 멀티 프로세스처럼 여러개의 프로세스에 메모리와 자원을 할당하면 비용이 많이 발생하지만, 스레드는 한 프로세스
    내에서 자원 ( 데이터, 메모리 등 의 자원)을 공유하기 때문에 경제적입니다.
@@ -50,8 +49,10 @@ tags: Process Thread Multi_Thread
 #### 단점
 
 1. 멀티스레드를 기반으로 할 경우, 동일한 자원에 접근할 수 있기 떄문에 프로그래밍시 신경써줘야한다.
+   
 2. 서로 다른 쓰레드가 데이터와 힙 영역을 공유하기 때문에 어떤 쓰레드가 다른 쓰레드에서 사용중인 변수나 자료구조에
    접근하여, 엉뚱한 값을 읽어오거나 수정할 수 있습니다. 그렇기 멀티스레드 환경에서는 동기화 작업이 필요합니다.
+
 3. 동기화 작업을 제대로 하지 않으면, 락 문제가 일어날 수 있고, 데이터 병목 현상이 일어날수있습니다.
 
 ### 힙 영역
@@ -61,5 +62,72 @@ tags: Process Thread Multi_Thread
 
 ### 멀티스레드와 멀티프로세스의 차이
 
-1. 멀티스레드는 하나의 프로세스에서 여러개의 쓰레드가 동작하며, 모든 스레드가 모두 같은 주소공간에서 동작하여 같은        메모리를 공유합니다. 
-2. 결국 멀티스레드는 하나의 프로그램안에서의 병렬처리의 이점을 맛볼수있고, 멀티프로세싱은 여러 개의 프로그램들을 병렬로    처리할 수 있습니다.
+1. 멀티스레드는 하나의 프로세스에서 여러개의 쓰레드가 동작하며, 모든 스레드가 모두 같은 주소공간에서 동작하여 같은    메모리를 공유합니다. 
+2. 결국 멀티스레드는 하나의 프로그램안에서의 병렬처리의 이점을 맛볼수있고, 멀티프로세싱은 여러 개의 프로그램들을 병렬로 처리할 수 있습니다.
+
+### 자바에서 스레드를 실행하는 방법
+
+#### Thread 클래스로부터 직접 생성
+
+* java.lang.Thread 클래스로부터 작업 스레드 객체를 직접 생성 하려면 Runnable을 매개값으로 갖는 생성자를 호출해야 한다. Runnable은 작업 스레드가 실행할 수 있는 코드를 가지고 있는 객체라고 해서 붙여진 이름이다. Runnable에는 run() 메소드 하나가 정의되어 있는데, 구현 클래스는 run()을 재정의해서 작업 스레드가 실행할 코드를 작성해야 한다.
+
+```java
+// 1번 방법
+Runnable task = new Task();
+Thread thread = new Thread(task);
+
+// 2번 방법, 쓰레드 생성자를 호출할 때 Runnable 익명 객체를 매개값으로 사용한다
+Thread thread = new Thread(new Runnable() {
+    public void run() {
+        // 스레드가 실행하는 코드!!
+    }
+});
+
+// 3번 방법, 람다식을 매개값으로 사용하는 방법
+Thread thread = new Thread(() -> {
+    // 스레드가 실행할 코드
+})
+
+```
+
+#### Thread를 상속받은 자식 클래스로부터 생성
+
+* Thread의 하위 클래스로 작업 스레드를 정의하면서 작업 내용을 포함시킬 수도 있다. Thread 클래스를 상속한 후 run 메소드를 overriding해서 스레드가 실행할 코드를 작성하면 된다.
+
+```java
+
+public class WorkerThread extends Thread {
+    @Override
+    public void run(){
+        // 스레드가 실행할 코드
+    }
+}
+
+Thread thread = new Thread(){
+    public void run(){
+        // 스레드가 실행할 코드
+    }
+}
+
+thread.start();
+
+```
+
+#### Thread 우선 순위
+
+* 동시성과 병렬성
+  * 동시성은 멀티작업을 위해서 하나의 코어에서 멀티스레드가 번갈아가며 실행하는 성질을 말하고, 병렬성은 멀티 작업을 위해 멀티코어에서 개별 스레드를 동시에 실행하는 성질을 말합니다. 싱글코어 CPU을 이용한 멀티스레드 작업을 하나의 코어가 번갈아가면서 스레드를 실행하기 때문에 마치 보기에는 동시에 실행하는 것처럼 보이지만, 사실은 빠르게 번갈아가면서 실행하고 있습니다.
+
+* 스레드 스케쥴링
+  * 스레드의 개수가 코어보다 많을 경우 스레드를 어떤 순서로 실행해야 하는지 결정해야 하는데, 이것을 스레드 스케줄링이라고 합니다.
+
+* 자바의 스레드 스케쥴링
+  * 우선 순위 방식과 순환할당 방식을 사용합니다
+  * 우선 순위 방식은 프로그래머가 스레드의 순서를 결정할 수 있습니다. 프로그래머가 지정한 우선 순위대로 실행상태를 더 많이 가져갈수 있습니다. 반대로 순환 할당 방식은 프로그래머가 따로 스레드를 제어하지 않을 경우 자바 프로그램 내에서 자동으로 순서를 결정해서 실행합니다.
+
+
+#### 데몬 스레드
+
+* 주 스레드의 작업을 돕는 보조적인 역활을 수행하는 스레드입니다.
+* 주 스레드가 종료되면 데몬 스레드는 강제적으로 종료됩니다.
+  * 워드 프로세서의 자동저장 기능, 미디어플레이어의 동영상 및 음악 재생, 가비지 컬렉터 등등
