# 블로그 포스팅 수정

--- a/_posts/Java/2019-07-05-java.md
+++ b/_posts/Java/2019-07-05-java.md
@@ -12,11 +12,13 @@ tags: java
 
 ## call by value, call by reference
 
-* 개인적으로 자바책을 보면서, 기본 타입과 참조 타입의 차이에 관한 내용은 본적이 있지만 다른 언어를 접해보지 않아서 보지못한 내용을 수도 있는 거 같다. 찾아보니 c와 c++을 먼저 공부했다면 무조건 등장한다고 한다.
+* 개인적으로 자바책을 보면서, 기본 타입과 참조 타입의 차이에 관한 내용은 본적이 있지만 다른 언어를 접해보지 않아서 보지못한 내용일 수도 있는 거 같다. 찾아보니 c와 c++을 먼저 공부했다면 무조건 등장한다고 한다.
 
 * 그럼 call by value는 어떻게 작동하는 것일까?
   * 가장 일반적인 형태로, 값을 복사해오는 것이다.
-  ```java
+  * 결과값은 당연히 25가 나올것이다.
+  
+```java
 
   public int add(int a, int b){
       return a + b;
@@ -24,16 +26,16 @@ tags: java
   
   int a = 10;
   int b = 15;
-  add(a,b);
+  System.out.println(add(a,b));
 
-  ```
-  * 결과값은 당연히 25가 나올것이다.
-
+```
+  
 * 그럼 call by reference는?
-  * 자바의 참조타입을 공부했다면 알수있듯이, 참조하는 메모리 주소를 복사해오는 것이다. 그럼 만약 a,b의 참조하는 메모리주소값을 변경하면 어떻게 될까? 답은 바뀐다.
+  * 자바의 참조타입을 공부했다면 알수있듯이, 참조하는 메모리 주소를 복사해오는 것이다. 어떻게 될까? 답은 a와 b의 값이 바뀐다.
 
 ### 그럼 java는 call by value인가? call by reference 인가?
   
+* 그럼 a와 b의 실제 객체의 메모리 주소도 바뀐것일까?
 * 여기 객체를 넘겨받아서, 새로운 객체로 변경하는 메서드 호출 코드가 있다.
     
 ```java
@@ -58,9 +60,9 @@ public class CallByValue {
 
 * 간단히 설명하면, 기본형 타입 변수와 참조형 타입 변수가 있는데 call by value 방식으로 값을 전달한다.
 
-* 결국, 자바는 call by value 방식으로 값을 복사하여 전달할수도 있고, 메모리 참조값을 전달 할 수 도 있다.
+* 결국, 자바는 call by value 방식으로 실제값을 복사하여 전달할수도 있고, 메모리 참조값을 전달 할 수 도 있다.
 
-* 복사된 주소값을 받을 수는 있지만, 실제 참조하고 있는 객체(변수) 자체를 받거나 변경할수는 없다.
+* 복사된 주소값을 받을 수는 있지만, 실제 참조하고 있는 객체(변수)를 변경할수는 없다.
 
 #### 참조
 
