--- a/_posts/운영체제/2019-03-13-Thread.md
+++ b/_posts/운영체제/2019-03-13-Thread.md
@@ -131,3 +131,17 @@ thread.start();
 * 주 스레드의 작업을 돕는 보조적인 역활을 수행하는 스레드입니다.
 * 주 스레드가 종료되면 데몬 스레드는 강제적으로 종료됩니다.
   * 워드 프로세서의 자동저장 기능, 미디어플레이어의 동영상 및 음악 재생, 가비지 컬렉터 등등
+
+
+#### 스레드풀
+
+* 스레드폭증
+  * 병렬처리 작업이 많아지면 스레드의 개수가 증가한다
+  * 스레드 생성과 스케쥴링으로 인해 CPU가 바빠지고, 메모리 사용량이 늘어난다
+  * 따라서 애플리케이션의 성능이 급격히 저하된다
+
+* 스레드풀
+  * 작업처리에 사용되는 스레드를 제한된 개수만큼 미리 생성
+  * 작업 큐(Queue)에 들어오는 작업들을 하나씩 스레드가 맡아 처리한다
+  * 작업 처리가 끝난 스레드는 작업결과를 애플리케이션으로 전달합니다
+  * 스레드는 다시 작업큐에서 새로운 작업을 가져와 처리한다
