# inverview, NoSQL 포스트 수정 및갱신

--- a/_posts/데이터베이스/2019-06-26-NoSQL.md
+++ b/_posts/데이터베이스/2019-06-26-NoSQL.md
@@ -61,3 +61,8 @@ tags: NoSQL MongoDB
 * 맵리듀스란?
   * 맵리듀스(MapReduce)는 구글에서 정보 검색을 위한 데이터 가공(색인어 추출, 정렬 및 역 인덱스 생성)을 목적으로 개발된 분산 환경에서의 병렬 데이터 처리 기법이자 프로그래밍 모델이다
 
+### 결과적 일관성
+
+* NoSQL에서는 응답시간, 일관성, 지속성의 균형을 위해 결과적 일관성을 구현한다.
+* 결과적 일관성이란, 서버가 여러 대인 분산시스템에서 데이터를 조회 했을 때 특정 서버는 변경 된 데이터가 조회되고 일부는 변경되지 않는 상태로 조회될 수 있다
+* 그 때 데이터 일관성을 위해서 모든 서버에 결과값을 질의하고 N개 이상의 같은 값을 반환할 때 사용자에게 해당 값을 보여주는 형태의 일관성이다 
