# es6 문법 정리중..!!

--- a/_posts/Javascript/2019-07-25-es6.md
+++ b/_posts/Javascript/2019-07-25-es6.md
@@ -7,3 +7,73 @@ categories: Javascript
 tags: javascript vue-cli es6
 ---
 
+## ES6 문법
+
+대표적인 4가지 문법입니다
+
+* 화살표 함수
+* 템플릿 리터럴
+* 모듈
+* 구조 분해와 확장문법
+
+### 화살표 함수 ( Arrow Functions )
+
+평소에도 가장 많이 사용하는 문법중 하나
+
+```javascript
+
+// 기존문법 es5
+function 함수명(){
+    로직
+}
+// es6 문법
+(매개변수값) => {
+    실행로직
+}
+// 매개변수가 하나일 경우, 괄호생략가능
+x => { 구현 }
+
+// 매개변수가 여러개인 경우 소괄호 생략불가
+(x,y) => { 구현 }
+
+// 함수의 구현내용이 한줄의 return만 있을 경우는 return 과 소괄호 모두 생략가능
+x => { return x * x }
+x => x * x;
+
+// 객체를 반환하는 경우는 소괄호를 사용한다
+() => { return { a:1 }; }
+() => ({ a:1 })
+
+// 함수구현 내용이 여러줄일 경우는 생략불가 ^^
+() => {           
+  const x = 10;
+  return x * x;
+};
+
+```
+
+### 화살표 함수의 호출
+
+* 화살표 함수는 익명 함수로만 사용할 수 있다. 따라서 화살표 함수를 호출하기 위해서는 함수 표현식을 사용한다
+
+```javascript
+
+//es5 
+var pow = function(x){ return x*x };
+console.log(pow(10)); // result : 100
+
+//es6, 엄청난 생략이 가능하다
+const pow = x => x * x;
+console.log(pow(10));
+
+var arr = [1,2,3];
+var pow = arr.map(function(x)){
+    return x * x;
+};
+
+const arr = [1,2,3];
+const pow = arr.map(x => x * x);
+
+console.log(pow);
+
+```
