# es6 문법 정리중..

--- a/_posts/Javascript/2019-07-25-es6.md
+++ b/_posts/Javascript/2019-07-25-es6.md
@@ -77,3 +77,43 @@ const pow = arr.map(x => x * x);
 console.log(pow);
 
 ```
+
+### 템플릿 리터럴 문법
+
+ES6에서 템플릿 리터럴이라고 불리는 새로운 문자열 표기법을 도입하였다. 템플릿 리터럴은 일반 문자열과 비슷해보이지만, ' 또는 " 같은 통상적인 따옴표 문자 대신 백틱문자 `를 사용한다
+
+```javascript
+
+const template = `템플릿 리터럴은 '작은따옴표(single quotes)'과 "큰따옴표(double quotes)"를 혼용할 수 있다.`;
+
+console.log(template);
+
+const template = `<ul class="nav-items">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>`;
+
+console.log(template);
+
+// + 연산자 없이 간단하게 사용가능
+
+const first = 'Ung-mo';
+const last = 'Lee';
+
+// ES5: 문자열 연결
+console.log('My name is ' + first + ' ' + last + '.');
+// "My name is Ung-mo Lee."
+
+// ES6: String Interpolation
+console.log(`My name is ${first} ${last}.`);
+// "My name is Ung-mo Lee."
+// +로 구분지을 필요없이 ${...} 으로 감싸면 문자열내의 표현식은 문자열로 강제로 타입변환 된다.
+
+console.log(`1 + 1 = ${1 + 1}`); 
+// "1 + 1 = 2"
+
+```
+
+* 출처 : https://poiemaweb.com/
